# stack-offline

./: .gitignore  .stylish-haskell.yaml  HLint.hs  README.md  distclean  files.txt  stack-offline.cabal  stack.yaml  test.full  test.full.proxy
app/: Main.hs
docker/: source.x86_64-linux
src/Data/Tuple/: Operator.hs
src/Stack/: Offline.hs
test/: Docker.hs  Spec.hs
test/Development/Shake/: Simple.hs
test/Development/Shake/Rule/: Simple.hs
tuple-operator/: tuple-operator.cabal
tuple-operator/Data/Tuple/: Operator.hs
