name:           stack-offline
version:        0.1.0.0
synopsis:       A tool to build stack projects offline
description:    Please see README.md
homepage:       https://github.com/cblp/stack-offline#readme
license:        GPL-3
license-file:   LICENSE
author:         Yuriy Syrovetskiy
maintainer:     cblp@cblp.su
copyright:      (c) 2016 Yuriy Syrovetskiy
category:       Development
build-type:     Simple
cabal-version:  >= 1.10

library
    hs-source-dirs:   src
    exposed-modules:  Stack.Offline
    build-depends:    base >= 4.7 && < 5
                    , Cabal
    default-language: Haskell2010
    ghc-options:      -Wall

executable stack-offline
    hs-source-dirs:   app
    main-is:          Main.hs
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall
    default-language: Haskell2010

    build-depends:    base
                    , Cabal
                    , optparse-applicative

                    , stack-offline

test-suite test
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall
    default-language: Haskell2010

    build-depends:    base
                    , directory
                    , extra
                    , interpolate
                    , process
                    , tasty
                    , tasty-hunit
                    , tuple-operator

                    , stack-offline

source-repository head
    type:     git
    location: https://github.com/cblp/stack-offline
