name:           tuple-operator
version:        0.1.0.0
synopsis:       A pair operator (-:)
description:    Please see README.md
homepage:       https://github.com/cblp/stack-offline#readme
license:        BSD3
author:         Yuriy Syrovetskiy
maintainer:     cblp@cblp.su
copyright:      (c) 2016 Yuriy Syrovetskiy
category:       Data
build-type:     Simple
cabal-version:  >= 1.2

library
    exposed-modules:  Data.Tuple.Operator
    build-depends:    base
